# tas_car-1

./: APHowto.txt  INSTALL.md  Notizen  README.md  hostapd.conf  instantAP.sh  startAP.sh
odom_vel_calculator/: CMakeLists.txt  package.xml
odom_vel_calculator/include/odom_vel_calculator/: odom_vel_calculator.h
odom_vel_calculator/src/: odom_vel_calculator.cpp  odom_vel_calculator.cpp~
presentation/: .~lock.presentation.pptx#  group2.pptx  text_simulator.txt  text_simulator.txt~
simple_navigation_goals/src/: main.cpp
simple_navigation_goals/src/backup/: main_backup.cpp
simulation/cmd_vel_ackermann_bridge/src/: cmd_vel_ackermann_bridge.cpp~
simulation/parking_node/: CMakeLists.txt  package.xml
simulation/parking_node/scripts/: controlled_parking.py  simulation_parking.py
simulation/tas_simulator/launch/: rviz.rviz  startNavigation.launch~  startSimulation.launch  startSimulation.launch~  startSimulation_parking.launch  test.launch~
simulation/tas_simulator/worlds/: 3rdFloor.world
tas/launch/: hardware.launch  move_base.launch  odom.launch  odom.launch~
tas/launch/config/move_base/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  (+1 more)
tas_autonomous_control/: CMakeLists.txt  package.xml
tas_autonomous_control/src/: tas_autonomous_control_node.cpp  tas_autonomous_control_node.cpp.orig
tas_autonomous_control/src/control/: control.cpp  control.h
wifi_localization/: CMakeLists.txt  package.xml
wifi_localization/include/wifi_localization/: FFNN.h
wifi_localization/src/: FFNN.cpp  loc.cpp
